Fix misaligned status text in checkout view

--- a/app/styles/pages/_checkout.scss
+++ b/app/styles/pages/_checkout.scss
@@ -12,6 +12,8 @@
     &.pay-status { width: 25%; }
     &.pay-pymt { width: 28%; }
 
+    &.pay-status p { margin-top: 0; }
+
     .text-error {
       padding-top: 5px;
     }
